exports[`test will update the state after the error action 1`] = `
Object {
  "isFetching": false,
  "mockResources": Object {
    "errors": Array [
      "This is an initial error",
      "This is another error",
    ],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;

exports[`test will update the state after the initial action 1`] = `
Object {
  "mockResources": Object {
    "errors": Array [],
    "isFetching": true,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;

exports[`test will update the state after the success action 1`] = `
Object {
  "mockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": "2016-01-01T00:00:00.000Z",
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {
      "resourceId": Object {
        "id": "resourceId",
        "prop1": "initial prop1",
        "prop2": "initial prop2",
        "relatedResource": "relatedResourceId",
      },
    },
    "resourcesBeingFetched": Array [],
    "selectedResource": "resourceId",
    "selectedResourceList": null,
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {
      "relatedResourceId": Object {
        "id": "relatedResourceId",
        "relatedProp1": "initial relatedProp1",
      },
    },
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;
